--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
         <div class="container-fluid">
             <ul class="tabs tabs-fixed-width z-depth-1">
                 <li class="tab">
-                    <router-link to="/">Collections</router-link>
+                    <router-link to="./">Collections</router-link>
                 </li>
                 <li class="tab">
-                    <router-link to="/cars">Cars</router-link>
+                    <router-link to="./cars">Cars</router-link>
                 </li>
             </ul>
         </div>
